--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                     <p class="mb-4">Light Palace, Mora Shopping Complex, GH Rd, Palayam, Kozhikode, Kerala 673001</p>
 
                     <h6 class="mb-0">Email</h6>
-                    <p class="mb-0">lightplace@gmail.com</p>
+                    <p class="mb-0">lightpalacekozhikode@gmail.com</p>
                     <p></p>
                 </div>
                 <div class="col-md-7">
