--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
             <div class="portfolio-container">
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/c2a1.jpg" class="img-fluid"
+                        <img src="assets/imgs/cla14.jpeg" class="img-fluid"
                             alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/c2a1.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/cla14.jpeg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Luminous Light</h6>
                                 <!-- <p class="subtitle">Price : 3,000</p> -->
@@ -225,10 +225,10 @@
                 </div>
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/c2a11.jpg" class="img-fluid"
+                        <img src="assets/imgs/cl2a1.jpeg" class="img-fluid"
                             alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/c2a11.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/cl2a1.jpeg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Luminous Light</h6>
                                 <!-- <p class="subtitle">Price : 3,000</p> -->
@@ -265,10 +265,10 @@
 
                 <div class="col-md-6 col-lg-4 advertising">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/c2a19.jpg" class="img-fluid"
+                        <img src="assets/imgs/c2a16.jpg" class="img-fluid"
                             alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/c2a19.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/c2a16.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Elegance Light</h6>
                                 <!-- <p class="subtitle">Price : 3,000</p> -->
@@ -291,10 +291,10 @@
                 </div>
                 <div class="col-md-6 col-lg-4 advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/c2a16.jpg" class="img-fluid"
+                        <img src="assets/imgs/cl2a19.jpeg" class="img-fluid"
                             alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/c2a16.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/cl2a19.jpeg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Elegance Light</h6>
                                 <!-- <p class="subtitle">Price : 3,000</p> -->
@@ -304,10 +304,10 @@
                 </div>
                 <div class="col-md-6 col-lg-4 advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/c2a17.jpg" class="img-fluid"
+                        <img src="assets/imgs/c2a11.jpg" class="img-fluid"
                             alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/c2a17.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/c2a11.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Elegance Light</h6>
                                 <!-- <p class="subtitle">Price : 3,000</p> -->
@@ -318,10 +318,10 @@
                 </div>
                 <div class="col-md-6 col-lg-4 branding new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/c2a21.jpg" class="img-fluid"
+                        <img src="assets/imgs/cl2a11.jpeg" class="img-fluid"
                             alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/c2a21.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/cl2a11.jpeg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Radiant Light</h6>
                                 <!-- <p class="subtitle">Price : 3,000</p> -->
@@ -344,10 +344,10 @@
                 </div>
                 <div class="col-md-6 col-lg-4 branding new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/c2a25.jpg" class="img-fluid"
+                        <img src="assets/imgs/cl2a5.jpeg" class="img-fluid"
                             alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/c2a25.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/cl2a5.jpeg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Radiant Light</h6>
                                 <!-- <p class="subtitle">Price : 3,000</p> -->
@@ -546,7 +546,15 @@
 
     <div id="slider-container" class="slider">
         <div class="slide">
-            <img src="assets/imgs/c2a21.jpg" alt="">
+            <img src="assets/imgs/cl2a1.jpeg" alt="">
+            <div class="slide-content">
+                <!-- <h6>Product Name</h6> -->
+                <!-- <p>Rs.34,000</p> -->
+            </div>
+
+        </div>
+        <div class="slide">
+            <img src="assets/imgs/cl2a13.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6> -->
                 <!-- <p>Rs.34,000</p> -->
@@ -561,21 +569,46 @@
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a22.jpg" alt="">
+            <img src="assets/imgs/cl2a12.jpeg" alt="">
+            <div class="slide-content">
+                <!-- <h6>Product Name</h6> -->
+                <!-- <p>Rs.34,000</p> -->
+            </div>
+
+        </div>
+        <div class="slide">
+            <img src="assets/imgs/cl2a11.jpeg" alt="">
+            <div class="slide-content">
+                <!-- <h6>Product Name</h6> -->
+                <!-- <p>Rs.34,000</p> -->
+            </div>
+
+        </div>
+        <div class="slide">
+            <img src="assets/imgs/cl2a9.jpeg" alt="">
+            <div class="slide-content">
+                <!-- <h6>Product Name</h6> -->
+                <!-- <p>Rs.34,000</p> -->
+            </div>
+
+        </div>
+        
+        <div class="slide">
+            <img src="assets/imgs/cl2a5.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a19.jpg" alt="">
+            <img src="assets/imgs/cl2a7.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a25.jpg" alt="">
+            <img src="assets/imgs/cl2a4.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
@@ -589,35 +622,56 @@
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a14.jpg" alt="">
+            <img src="assets/imgs/cl2a3.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a26.jpg" alt="">
+            <img src="assets/imgs/cl2a19.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a20.jpg" alt="">
+            <img src="assets/imgs/cl2a18.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a18.jpg" alt="">
+            <img src="assets/imgs/cl2a1.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a17.jpg" alt="">
+            <img src="assets/imgs/cl2a4.jpeg" alt="">
+            <div class="slide-content">
+                <!-- <h6>Product Name</h6>
+                <p>Rs.34,000</p> -->
+            </div>
+        </div>
+        <div class="slide">
+            <img src="assets/imgs/cl2a16.jpeg" alt="">
+            <div class="slide-content">
+                <!-- <h6>Product Name</h6>
+                <p>Rs.34,000</p> -->
+            </div>
+        </div>
+        <div class="slide">
+            <img src="assets/imgs/cl2a5.jpeg" alt="">
+            <div class="slide-content">
+                <!-- <h6>Product Name</h6>
+                <p>Rs.34,000</p> -->
+            </div>
+        </div>
+        <div class="slide">
+            <img src="assets/imgs/cl2a21.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
@@ -631,7 +685,7 @@
             </div>
         </div>
         <div class="slide">
-            <img src="assets/imgs/c2a20.jpg" alt="">
+            <img src="assets/imgs/cl2a6.jpeg" alt="">
             <div class="slide-content">
                 <!-- <h6>Product Name</h6>
                 <p>Rs.34,000</p> -->
@@ -777,7 +831,7 @@
                     <p class="mb-4">Light Palace, Mora Shopping Complex, GH Rd, Palayam, Kozhikode, Kerala 673001</p>
 
                     <h6 class="mb-0">Email</h6>
-                    <p class="mb-0">lightpalacekozhikode@gmail.com</p>
+                    <p class="mb-0">lightplace@gmail.com</p>
                     <p></p>
                 </div>
                 <div class="col-md-7">
