--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             transition: .25s ease-in-out;
         }
 
-        .slide img.zoomed {
+/*         .slide img.zoomed {
             width: 500px;
             height: 600px;
             position: fixed;
@@ -464,7 +464,7 @@
             z-index: 1000;
             transform: scale(1) translatey(0) !important;
 
-        }
+        } */
 
         .overlay {
             position: absolute;
