--- a/index.html
+++ b/index.html
@@ -825,13 +825,13 @@
             <div class="row align-items-center">
                 <div class="col-md-5 my-3">
                     <h6 class="mb-0">Phone</h6>
-                    <p class="mb-4">+91-7942690638</p>
+                    <p class="mb-4">+91-8089833153</p>
 
                     <h6 class="mb-0">Address</h6>
                     <p class="mb-4">Light Palace, Mora Shopping Complex, GH Rd, Palayam, Kozhikode, Kerala 673001</p>
 
                     <h6 class="mb-0">Email</h6>
-                    <p class="mb-0">lightplace@gmail.com</p>
+                    <p class="mb-0">lightpalacekozhikode@gmail.com</p>
                     <p></p>
                 </div>
                 <div class="col-md-7">
