--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
     <section class="section" id="blog">
         <div class="container">
             <h6 class="section-title mb-0 text-center">Our Offers</h6>
-            <h6 class="section-subtitle mb-5 text-center">Architecto provident deserunt eveniet libero</h6>
+            <h6 class="section-subtitle mb-5 text-center">Illuminate with Exclusive Elegance</h6>
 
             <div class="row">
                 <div class="col-md-4">
@@ -768,7 +768,7 @@
     <!-- Testmonial Section -->
     <section class="section" id="testmonial">
         <div class="container">
-            <h6 class="section-title text-center mb-0">customer Reviews</h6>
+            <h6 class="section-title text-center mb-0">Customer Reviews</h6>
             <h6 class="section-subtitle mb-5 text-center">What Our Clients Says</h6>
             <div class="row">
                 <div class="col-md-4 my-3 my-md-0">
